deploy-openshift.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: ${OC_APP_NAME}
spec:
  replicas: ${OC_QT_REPLICAS}
  selector:
    app: ${OC_APP_NAME}
  template:
    metadata:
      labels:
        app: ${OC_APP_NAME}
    spec:
      containers:
        - name: ${OC_APP_NAME}
          image: ${AZUREIMAGELINK}:${APPVERSION}
          ports:
            - containerPort: ${APP_PORT}
              protocol: TCP
          resources:
            limits:
              cpu: ${OC_QT_LM_CPU}
              memory: ${OC_QT_LM_MEMORY}
            requests:
              cpu: ${OC_QT_RE_CPU}
              memory: ${OC_QT_RE_MEMORY}
          volumeMounts:
            - mountPath: /tmp
              name: temp-storage
      volumes:
        - name: temp-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: srv-${OC_APP_NAME}
  labels:
    autor: SAG
spec:
  selector:
    app: ${OC_APP_NAME}
  ports:
    - name: ${APP_PORT}-${APP_PORT}
      protocol: TCP
      port: ${APP_PORT}
      targetPort: ${APP_PORT}
  type: NodePort
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-${OC_APP_NAME}
  labels:
    app: srv-${OC_APP_NAME}
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  to:
    kind: Service
    name: srv-${OC_APP_NAME}
  host: ${URLBASEENDPOINT}.${URL_DOMAIN_DESA}
  port:
    targetPort: ${APP_PORT}-${APP_PORT}
  tls:
    termination: edge
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-${OC_APP_NAME}-sag
  labels:
    app: srv-${OC_APP_NAME}
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  to:
    kind: Service
    name: srv-${OC_APP_NAME}
  host: ${URLSAG}
  port:
    targetPort: ${APP_PORT}-${APP_PORT}
